...
            Image("icon")
                .resizable()
                .scaledToFit()
            
            Spacer()
            
            CustomTextField(label: "Fullname", text: $fullname, prompt: "Enter fullname")
                .keyboardType(.default)
            
            CustomTextField(label: "Email", text: $email, prompt: "Enter email")
                .keyboardType(.emailAddress)
                .textInputAutocapitalization(.never)
            
            CustomSecureField(label: "Password", text: $password, prompt: "Enter password")
                .textInputAutocapitalization(.never)
            
            CustomButton(title: session.isLoading ? "" : "Create", color: .lightBlue) {
                Task {
                    await session.signUp(fullname: fullname, email: email, password: password)
                    if session.error == nil {
                        coordinator.dismiss()
                    }
                }
...
